# LLMBranchingFactor

./: README.md  pyproject.toml  requirements_conda.txt  setup.py
cognac/: application_cognac_ctrlgen.py  application_cognac_ctrlgen_get_full_prob.py  check_step2_progress.py  check_violating_constraints.py  clean_main_spectrum.py  cognac_consts.py  cognac_metrics.py  cognac_utils.py  create_sampled_task_cognac.py  draw_app_cognac_ctrlgen_constraints_enhancement.py  draw_stat_cognac_app_ctrlgen.py  investigate_cognac_increasing_ppl.py  main.py  main_keywords.py  run_application_cognac_ctrlgen.sh  run_draw_stat_cognac_app_ctrlgen_multi_constraints.sh  run_investigate_cognac_increasing_entropy_enforce_min_p.sh  run_stat.sh  run_stat_cognac_increasing_entropy.sh  self_consistency_analysis_app_cognac_ctrlgen.py  stat_cognac_increasing_ppl.py  step0_generate_keyword_list_and_bullet_points.py  step1_run_cognac.sh  step1_run_cognac_keywords.sh  step2_5_plot_constraint_violation.py  step2_run_cognac_constraint_violation_investigation.sh  step2_run_entropy_profile_generation.sh  step2_run_entropy_profile_generation_keywords.sh  step2_run_loglik_analysis.sh  step3_run_stat.sh  step3_run_stat_keywords.sh
demo/: data.py  demo.py  plot_demo_storywriting.sh  run_demo.sh  run_demo_mmlu.sh  run_demo_storywriting.sh
language_modeling/: data_utils.py  main.py  news_tagger.py  nudging_probabilistic_computation.py  nudging_top_k_computation.py  step0_create_random_str.sh  step0_random_string_generator.py  step1_run_lm.sh  step1_run_news.sh  step1_run_random_str.sh  step3_run_stat.sh  (+18 more)
(+75 files in other folders)
