[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "branching_factor"
version = "0.1"
description = "Branching Factor Evaluation for LLMs"
authors = [
    {name = "Chenghao Yang", email = "chenghao@uchicago.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]


[tool.setuptools.packages.find]
where = [".", "uncertainty_quantification"]

